# aprendizajeMaquina

./: Proyectofinal.ipynb  README.md
Codigos/: main.py
Codigos/PUJ_ML_01/examples/python3/: LinearModel_01.py  LinearModel_Fit_01.py  LinearModel_Fit_GradientDescent_01.py
Codigos/PUJ_ML_01_en_clase/examples/python3/: .~lock.data_00.csv#  LinearModel_01.py  LinearModel_Fit_GradientDescent_01.py  LogisticModel_01.py  data_00.csv  ejemplo.pbm  prueba.csv  read_pbm.py
GIT LEO/examples/data/: prueba.csv
GIT LEO/examples/kmeans/: CreateSamples.py
GIT LEO/examples/python3/: SVMexample.py
GIT LEO/libPy/python3/PUJ/Model/: Base.py  (+2 more)
GIT LEO/python3/: Cost.py
PUJ_ML-3/: CMakeLists.txt
PUJ_ML-3/examples/cxx/: Linear_Model_Fit_ADAM_01.cxx  Linear_Model_Fit_GradientDescent_01.cxx  Logistic_Model_01.cxx  Logistic_Model_Fit_GradientDescent_01.cxx
PUJ_ML-3/examples/python3/: Linear_Model_Fit_GradientDescent_01.py  NeuralNetwork_FeedForward_01.py  NeuralNetwork_FeedForward_Fit_ADAM_01.py  playgroundExample.py
PUJ_ML/examples/cxx/: CMakeLists.txt  Linear_Model_01.cxx  Logistic_Model_Fit_ADAM_01.cxx
PUJ_ML/examples/python3/: Linear_Model_Fit_ADAM_01.py  Logistic_Model_Fit_ADAM_MNIST_01.py  Logistic_Model_Fit_GradientDescent_MNIST_01.py  NeuralNetwork_FeedForward_Fit_GradientDescent_01.py
Taller1/PUJ_ML_03/: readme.txt.txt
Taller1/PUJ_ML_03/examples/data/: clasificadores04.npz
Taller1/pesos/: clasificadores.npz  entrenador0.npy  entrenador1.npy  entrenador2.npy  entrenador2tent.npy  entrenador5.npy  entrenador6.npy  entrenador7.npy  entrenador8.npy  entrenador9.npy
(+5 files in other folders)
